Fixed button alignment. Temporary fix for header overflow.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,21 @@
+@media (max-width:500px) {
+
+#addUserButton button {
+    visibility: hidden;
+}
+
+}
+
+@media (min-width:500px) {
+
+#addUserButton button {
+    visibility: visible;
+}
+
+}
+
+
+
 html {
     height: 100%;
     background-color: #17234E;
@@ -29,7 +47,6 @@ body {
 #projectListJumbo {
   height: 200%;
   width: 100%;
-  text-align: center;
 }
 
 #projectListTable {
